@@ -1,5 +1,10 @@
 [b]Version 0.5.62[/b] (not released yet):
 
+(2007-10-17)
+ * Added a 2nd patch by LoRd_MuldeR for winfileassoc.cpp.
+ * Added a work-around for a problem which prevents to use the arrow keys
+   for shortcuts when using Simplified-Chinese.
+
 (2007-10-15)
  * Added clean_windows.bat, which deletes the compilation files.
  * Now the settings for played files will be saved in an independent file:
